ingress_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'         # <--- also works w/o this line, optional 
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:<your-account-id>:certificate/xxxx  # <--- add this line, ACM cert 
    alb.ingress.kubernetes.io/scheme: internet-facing  # <--- dd this line, w/o it LB will work only internal 
    alb.ingress.kubernetes.io/target-type: ip   # <--- add this line, w/o it you need to create NodePort type for k8s svc
    meta.helm.sh/release-name: astronomer
    meta.helm.sh/release-namespace: astronomer
  finalizers:
  - ingress.k8s.aws/resources
  generation: 2
  labels:
    app.kubernetes.io/managed-by: Helm
    chart: prometheus-0.13.0
    component: prometheus-ingress
    heritage: Helm
    release: astronomer
    tier: prometheus-networking
  name: astronomer-prometheus-ingress
  namespace: astronomer
spec:
  ingressClassName: alb  # <--- add this line
  rules:
  - host: prometheus.oleks.aws.astronomer-demo.com
    http:
      paths:
      - backend:
          service:
            name: astronomer-prometheus
            port:
              name: auth-proxy
        path: /
        pathType: Prefix
#  tls:
#  - hosts:
#    - prometheus.oleks.aws.astronomer-demo.com
#    secretName: astronomer-tls
